--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -33,6 +33,14 @@
       ],
       "condition": "git diff --exit-code > /dev/null"
     },
+    "prepare": {
+      "name": "prepare",
+      "steps": [
+        {
+          "exec": "npx projen compile"
+        }
+      ]
+    },
     "bump": {
       "name": "bump",
       "category": "20.release",
