--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "clobber": "npx projen clobber",
+    "prepare": "npx projen prepare",
     "bump": "npx projen bump",
     "unbump": "npx projen unbump",
     "compile": "npx projen compile",
